[package]
name = "cita-bench"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
clap = "2"
tabwriter = "1.1"
rand = "0.6"
ctrlc = { version = "3.0", features = ["termination"] }
cita-web3 = { git = "https://github.com/cryptape/cita-common", branch = "develop" }
cita-types = { git = "https://github.com/cryptape/cita-common", branch = "develop" }
cita-crypto = { git = "https://github.com/cryptape/cita-common", branch = "develop" }
libproto = { git = "https://github.com/cryptape/cita-common", branch = "develop" }

[features]
default = ["secp256k1", "sha3hash"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2"]
sha3hash = ["libproto/sha3hash"]
blake2bhash = ["libproto/blake2bhash"]
sm3hash = ["libproto/sm3hash"]
